# ElastosCarrierSession

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/elastos/carrier/elastoscarriersession/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/elastos/carrier/elastoscarriersession/: ChatActivity.java  ElaRpcUtils.java  FriendInfo.java  MainActivity.java  MainFragment.java  MeFragment.java  QRCodeUtils.java
app/src/main/java/com/google/zxing/activity/: CaptureActivity.java
app/src/main/java/com/google/zxing/decoding/: CaptureActivityHandler.java  DecodeHandler.java
app/src/main/java/com/google/zxing/view/: ViewfinderView.java
app/src/main/jni/: Android.mk  elastos_session_rpc.cpp
app/src/main/jni/Elastos.ElaSessionRpcClient/: Elastos.ElaSessionRpcClient.Export.h  Elastos.ElaSessionRpcClient.h  _Elastos.ElaSessionRpcClient.h
app/src/main/jni/elastos/include/: Elastos.ElaSessionRpcClient.h  ElastosCore.h
app/src/main/jni/elastos/libs/: Elastos.Runtime.lib
app/src/main/res/layout/: activity_chat.xml  activity_main.xml  activity_scanner.xml  bottom.xml  fragment_me.xml  fragment_message.xml  itemlayout.xml  toolbar_main.xml  toolbar_scanner.xml  top.xml
app/src/main/res/menu/: othertools.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/elastos/carrier/elastoscarriersession/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
